--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -22,11 +22,11 @@
    "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:27.692795Z",
-     "iopub.status.busy": "2022-07-16T13:47:27.692399Z",
-     "iopub.status.idle": "2022-07-16T13:47:29.162472Z",
-     "shell.execute_reply": "2022-07-16T13:47:29.161291Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:27.692693Z"
+     "iopub.execute_input": "2022-11-13T18:50:15.647052Z",
+     "iopub.status.busy": "2022-11-13T18:50:15.646811Z",
+     "iopub.status.idle": "2022-11-13T18:50:17.110483Z",
+     "shell.execute_reply": "2022-11-13T18:50:17.109735Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:15.646976Z"
     },
     "tags": []
    },
@@ -56,11 +56,11 @@
    "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:29.166631Z",
-     "iopub.status.busy": "2022-07-16T13:47:29.166447Z",
-     "iopub.status.idle": "2022-07-16T13:47:29.361223Z",
-     "shell.execute_reply": "2022-07-16T13:47:29.360458Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:29.166607Z"
+     "iopub.execute_input": "2022-11-13T18:50:17.114169Z",
+     "iopub.status.busy": "2022-11-13T18:50:17.113958Z",
+     "iopub.status.idle": "2022-11-13T18:50:17.320490Z",
+     "shell.execute_reply": "2022-11-13T18:50:17.319718Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:17.114142Z"
     },
     "tags": []
    },
@@ -111,7 +111,7 @@
     "    ),\n",
     "    data_mut_escape_overlap=\"fill_to_data\",\n",
     ")\n",
-    "polyclonal_data.fit()\n",
+    "polyclonal_data.fit(reg_uniqueness2_weight=0)\n",
     "# Now only use the first 30 elements to get rid of some mutations\n",
     "polyclonal_data2 = Polyclonal(\n",
     "    data_to_fit=data_to_fit.head(20),\n",
@@ -138,11 +138,11 @@
    "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:29.365725Z",
-     "iopub.status.busy": "2022-07-16T13:47:29.365358Z",
-     "iopub.status.idle": "2022-07-16T13:47:29.385612Z",
-     "shell.execute_reply": "2022-07-16T13:47:29.384821Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:29.365700Z"
+     "iopub.execute_input": "2022-11-13T18:50:17.324628Z",
+     "iopub.status.busy": "2022-11-13T18:50:17.324403Z",
+     "iopub.status.idle": "2022-11-13T18:50:17.345195Z",
+     "shell.execute_reply": "2022-11-13T18:50:17.344564Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:17.324606Z"
     },
     "tags": []
    },
@@ -174,11 +174,11 @@
    "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:29.388541Z",
-     "iopub.status.busy": "2022-07-16T13:47:29.388395Z",
-     "iopub.status.idle": "2022-07-16T13:47:29.534871Z",
-     "shell.execute_reply": "2022-07-16T13:47:29.533603Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:29.388522Z"
+     "iopub.execute_input": "2022-11-13T18:50:17.348162Z",
+     "iopub.status.busy": "2022-11-13T18:50:17.347944Z",
+     "iopub.status.idle": "2022-11-13T18:50:17.501309Z",
+     "shell.execute_reply": "2022-11-13T18:50:17.499878Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:17.348141Z"
     },
     "tags": []
    },
@@ -216,11 +216,11 @@
    "id": "3ce1356d-9c5d-4b83-85d1-c2c2cdd0b8fb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:29.540109Z",
-     "iopub.status.busy": "2022-07-16T13:47:29.539762Z",
-     "iopub.status.idle": "2022-07-16T13:47:29.667410Z",
-     "shell.execute_reply": "2022-07-16T13:47:29.666425Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:29.540064Z"
+     "iopub.execute_input": "2022-11-13T18:50:17.506204Z",
+     "iopub.status.busy": "2022-11-13T18:50:17.505977Z",
+     "iopub.status.idle": "2022-11-13T18:50:17.644322Z",
+     "shell.execute_reply": "2022-11-13T18:50:17.643342Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:17.506177Z"
     },
     "tags": []
    },
@@ -241,11 +241,11 @@
    "id": "781ad89f-9e61-4708-81d8-91fc89f2ed25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:29.671604Z",
-     "iopub.status.busy": "2022-07-16T13:47:29.671325Z",
-     "iopub.status.idle": "2022-07-16T13:47:29.800103Z",
-     "shell.execute_reply": "2022-07-16T13:47:29.798918Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:29.671567Z"
+     "iopub.execute_input": "2022-11-13T18:50:17.648467Z",
+     "iopub.status.busy": "2022-11-13T18:50:17.648271Z",
+     "iopub.status.idle": "2022-11-13T18:50:17.788023Z",
+     "shell.execute_reply": "2022-11-13T18:50:17.786846Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:17.648437Z"
     },
     "tags": []
    },
@@ -274,11 +274,11 @@
    "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:29.806195Z",
-     "iopub.status.busy": "2022-07-16T13:47:29.805836Z",
-     "iopub.status.idle": "2022-07-16T13:47:30.248225Z",
-     "shell.execute_reply": "2022-07-16T13:47:30.246722Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:29.806150Z"
+     "iopub.execute_input": "2022-11-13T18:50:17.792527Z",
+     "iopub.status.busy": "2022-11-13T18:50:17.792231Z",
+     "iopub.status.idle": "2022-11-13T18:50:18.207813Z",
+     "shell.execute_reply": "2022-11-13T18:50:18.206515Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:17.792500Z"
     },
     "tags": []
    },
@@ -294,11 +294,11 @@
    "id": "191a9185-f1d3-4271-8116-fd0a47b788ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:30.253833Z",
-     "iopub.status.busy": "2022-07-16T13:47:30.253341Z",
-     "iopub.status.idle": "2022-07-16T13:47:30.860837Z",
-     "shell.execute_reply": "2022-07-16T13:47:30.860108Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:30.253782Z"
+     "iopub.execute_input": "2022-11-13T18:50:18.212135Z",
+     "iopub.status.busy": "2022-11-13T18:50:18.211934Z",
+     "iopub.status.idle": "2022-11-13T18:50:18.678061Z",
+     "shell.execute_reply": "2022-11-13T18:50:18.677327Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:18.212108Z"
     },
     "tags": []
    },
@@ -333,11 +333,11 @@
    "id": "1b73d334-a4f0-4dc6-b636-6c179930dd74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:30.862475Z",
-     "iopub.status.busy": "2022-07-16T13:47:30.862111Z",
-     "iopub.status.idle": "2022-07-16T13:47:30.965969Z",
-     "shell.execute_reply": "2022-07-16T13:47:30.964752Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:30.862448Z"
+     "iopub.execute_input": "2022-11-13T18:50:18.681683Z",
+     "iopub.status.busy": "2022-11-13T18:50:18.681453Z",
+     "iopub.status.idle": "2022-11-13T18:50:18.781067Z",
+     "shell.execute_reply": "2022-11-13T18:50:18.780355Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:18.681655Z"
     },
     "tags": []
    },
@@ -356,11 +356,11 @@
    "id": "5728896f-1b6d-4c01-85b1-59eff469e05e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-07-16T13:47:30.967847Z",
-     "iopub.status.busy": "2022-07-16T13:47:30.967574Z",
-     "iopub.status.idle": "2022-07-16T13:47:31.054163Z",
-     "shell.execute_reply": "2022-07-16T13:47:31.053372Z",
-     "shell.execute_reply.started": "2022-07-16T13:47:30.967736Z"
+     "iopub.execute_input": "2022-11-13T18:50:18.782300Z",
+     "iopub.status.busy": "2022-11-13T18:50:18.781994Z",
+     "iopub.status.idle": "2022-11-13T18:50:18.895164Z",
+     "shell.execute_reply": "2022-11-13T18:50:18.894105Z",
+     "shell.execute_reply.started": "2022-11-13T18:50:18.782277Z"
     },
     "tags": []
    },
