--- a/mutation_rate.ipynb
+++ b/mutation_rate.ipynb
@@ -17,7 +17,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-13T17:43:48.893968Z",
+     "iopub.status.busy": "2022-11-13T17:43:48.893393Z",
+     "iopub.status.idle": "2022-11-13T17:43:50.264173Z",
+     "shell.execute_reply": "2022-11-13T17:43:50.263627Z",
+     "shell.execute_reply.started": "2022-11-13T17:43:48.893856Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -39,7 +47,15 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-13T17:43:50.265570Z",
+     "iopub.status.busy": "2022-11-13T17:43:50.265388Z",
+     "iopub.status.idle": "2022-11-13T17:43:51.201354Z",
+     "shell.execute_reply": "2022-11-13T17:43:51.200905Z",
+     "shell.execute_reply.started": "2022-11-13T17:43:50.265548Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -74,47 +90,47 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td>AAAAACGCGGTCACTT</td>\n",
+       "      <td>AAAAAATGTTCTATCC</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.08748</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td></td>\n",
-       "      <td>0.1128</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td>AAAAAGCACCATAACG</td>\n",
+       "      <td>AAAAACAATCCGGACT</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.03424</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td></td>\n",
-       "      <td>0.1128</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td>AAAAAGGGAGCTAAAC</td>\n",
+       "      <td>AAAAACGCGGTCACTT</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.03788</td>\n",
+       "      <td>0.018470</td>\n",
        "      <td></td>\n",
-       "      <td>0.1128</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td>AAAAAGTCGGATGGGC</td>\n",
+       "      <td>AAAAACTTGGCTAGCT</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.03573</td>\n",
+       "      <td>0.003051</td>\n",
        "      <td></td>\n",
-       "      <td>0.1128</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>avg1muts</td>\n",
-       "      <td>AAAAAGTCTTAGGGAA</td>\n",
+       "      <td>AAAAAGCAAGGCCCAG</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td></td>\n",
-       "      <td>0.1128</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -126,83 +142,83 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>359995</th>\n",
-       "      <td>avg4muts</td>\n",
-       "      <td>GGGAAATTAGACTTTC</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0.03703</td>\n",
-       "      <td>Y508W C525F</td>\n",
-       "      <td>0.4073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>359996</th>\n",
-       "      <td>avg4muts</td>\n",
-       "      <td>GGGAAATTAGACTTTC</td>\n",
+       "      <th>479995</th>\n",
+       "      <td>avg3muts</td>\n",
+       "      <td>CTTAAAATAGCTGGTC</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>0.03618</td>\n",
-       "      <td>Y508W C525F</td>\n",
-       "      <td>0.4073</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Y508W</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>359997</th>\n",
+       "      <th>479996</th>\n",
        "      <td>avg4muts</td>\n",
-       "      <td>GCCACGTTGCAATTCA</td>\n",
+       "      <td>GGTCAATTATGTCGGG</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Y508W</td>\n",
+       "      <td>0.08212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>479997</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td>GGAACGACAGTGATCG</td>\n",
        "      <td>0.25</td>\n",
-       "      <td>0.25930</td>\n",
-       "      <td>Y508W G526L</td>\n",
-       "      <td>0.4122</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Y508W T531H</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>359998</th>\n",
-       "      <td>avg4muts</td>\n",
-       "      <td>GCCACGTTGCAATTCA</td>\n",
+       "      <th>479998</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td>GGAACGACAGTGATCG</td>\n",
        "      <td>1.00</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>Y508W G526L</td>\n",
-       "      <td>0.4122</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Y508W T531H</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>359999</th>\n",
-       "      <td>avg4muts</td>\n",
-       "      <td>GCCACGTTGCAATTCA</td>\n",
+       "      <th>479999</th>\n",
+       "      <td>avg1muts</td>\n",
+       "      <td>GGAACGACAGTGATCG</td>\n",
        "      <td>4.00</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>Y508W G526L</td>\n",
-       "      <td>0.4122</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>Y508W T531H</td>\n",
+       "      <td>0.08212</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>360000 rows × 6 columns</p>\n",
+       "<p>480000 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         library           barcode  concentration  prob_escape  \\\n",
-       "0       avg1muts  AAAAACGCGGTCACTT           0.25      0.08748   \n",
-       "1       avg1muts  AAAAAGCACCATAACG           0.25      0.03424   \n",
-       "2       avg1muts  AAAAAGGGAGCTAAAC           0.25      0.03788   \n",
-       "3       avg1muts  AAAAAGTCGGATGGGC           0.25      0.03573   \n",
-       "4       avg1muts  AAAAAGTCTTAGGGAA           0.25      0.00000   \n",
+       "0       avg1muts  AAAAAATGTTCTATCC           0.25     0.000000   \n",
+       "1       avg1muts  AAAAACAATCCGGACT           0.25     0.000000   \n",
+       "2       avg1muts  AAAAACGCGGTCACTT           0.25     0.018470   \n",
+       "3       avg1muts  AAAAACTTGGCTAGCT           0.25     0.003051   \n",
+       "4       avg1muts  AAAAAGCAAGGCCCAG           0.25     0.000000   \n",
        "...          ...               ...            ...          ...   \n",
-       "359995  avg4muts  GGGAAATTAGACTTTC           1.00      0.03703   \n",
-       "359996  avg4muts  GGGAAATTAGACTTTC           4.00      0.03618   \n",
-       "359997  avg4muts  GCCACGTTGCAATTCA           0.25      0.25930   \n",
-       "359998  avg4muts  GCCACGTTGCAATTCA           1.00      0.00000   \n",
-       "359999  avg4muts  GCCACGTTGCAATTCA           4.00      0.00000   \n",
+       "479995  avg3muts  CTTAAAATAGCTGGTC           4.00     0.000000   \n",
+       "479996  avg4muts  GGTCAATTATGTCGGG           4.00     0.000000   \n",
+       "479997  avg1muts  GGAACGACAGTGATCG           0.25     0.000000   \n",
+       "479998  avg1muts  GGAACGACAGTGATCG           1.00     0.000000   \n",
+       "479999  avg1muts  GGAACGACAGTGATCG           4.00     0.000000   \n",
        "\n",
-       "       aa_substitutions    IC90  \n",
-       "0                        0.1128  \n",
-       "1                        0.1128  \n",
-       "2                        0.1128  \n",
-       "3                        0.1128  \n",
-       "4                        0.1128  \n",
-       "...                 ...     ...  \n",
-       "359995      Y508W C525F  0.4073  \n",
-       "359996      Y508W C525F  0.4073  \n",
-       "359997      Y508W G526L  0.4122  \n",
-       "359998      Y508W G526L  0.4122  \n",
-       "359999      Y508W G526L  0.4122  \n",
+       "       aa_substitutions     IC90  \n",
+       "0                        0.08212  \n",
+       "1                        0.08212  \n",
+       "2                        0.08212  \n",
+       "3                        0.08212  \n",
+       "4                        0.08212  \n",
+       "...                 ...      ...  \n",
+       "479995            Y508W  0.08212  \n",
+       "479996            Y508W  0.08212  \n",
+       "479997      Y508W T531H  0.08212  \n",
+       "479998      Y508W T531H  0.08212  \n",
+       "479999      Y508W T531H  0.08212  \n",
        "\n",
-       "[360000 rows x 6 columns]"
+       "[480000 rows x 6 columns]"
       ]
      },
      "execution_count": 2,
@@ -258,16 +274,24 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-13T17:43:51.202379Z",
+     "iopub.status.busy": "2022-11-13T17:43:51.202218Z",
+     "iopub.status.idle": "2022-11-13T18:02:33.083931Z",
+     "shell.execute_reply": "2022-11-13T18:02:33.082422Z",
+     "shell.execute_reply.started": "2022-11-13T17:43:51.202360Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model on data with 1 average mutations was already fit.\n",
-      "Model on data with 2 average mutations was already fit.\n",
-      "Model on data with 3 average mutations was already fit.\n",
-      "Model on data with 4 average mutations was already fit.\n"
+      "Model on data with 1 average mutations fit and saved.\n",
+      "Model on data with 2 average mutations fit and saved.\n",
+      "Model on data with 3 average mutations fit and saved.\n",
+      "Model on data with 4 average mutations fit and saved.\n"
      ]
     }
    ],
@@ -303,7 +327,7 @@
     "        ),\n",
     "        data_mut_escape_overlap=\"fill_to_data\",\n",
     "    )\n",
-    "    poly_abs.fit(reg_escape_weight=0.01, reg_activity_weight=0)\n",
+    "    poly_abs.fit(reg_escape_weight=0.01, reg_uniqueness2_weight=0)\n",
     "    return poly_abs\n",
     "\n",
     "\n",
@@ -339,7 +363,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-13T18:02:33.087764Z",
+     "iopub.status.busy": "2022-11-13T18:02:33.087425Z",
+     "iopub.status.idle": "2022-11-13T18:02:33.293323Z",
+     "shell.execute_reply": "2022-11-13T18:02:33.292713Z",
+     "shell.execute_reply.started": "2022-11-13T18:02:33.087723Z"
+    }
+   },
    "outputs": [],
    "source": [
     "all_corrs = pd.DataFrame({\"epitope\": [], \"correlation (R^2)\": [], \"mutation_rate\": []})\n",
@@ -372,19 +404,35 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-11-13T18:02:33.294387Z",
+     "iopub.status.busy": "2022-11-13T18:02:33.294132Z",
+     "iopub.status.idle": "2022-11-13T18:02:33.370757Z",
+     "shell.execute_reply": "2022-11-13T18:02:33.370204Z",
+     "shell.execute_reply.started": "2022-11-13T18:02:33.294366Z"
+    }
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/fh/fast/bloom_j/software/miniconda3/envs/BloomLab/lib/python3.8/site-packages/altair/utils/core.py:317: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "  for col_name, dtype in df.dtypes.iteritems():\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-6416e22e389b4291b6e4eca09d47bb0d\"></div>\n",
+       "<div id=\"altair-viz-a64cf921b391453b86389297a1ca83cd\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-6416e22e389b4291b6e4eca09d47bb0d\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-6416e22e389b4291b6e4eca09d47bb0d\");\n",
+       "    if (outputDiv.id !== \"altair-viz-a64cf921b391453b86389297a1ca83cd\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-a64cf921b391453b86389297a1ca83cd\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -430,7 +478,7 @@
        "        .catch(showError)\n",
        "        .then(() => displayChart(vegaEmbed));\n",
        "    }\n",
-       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-2df929f67f8a87bcedc65c2397a19805\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"scale\": {\"range\": [\"#0072B2\", \"#009E73\", \"#CC79A7\"]}, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-2df929f67f8a87bcedc65c2397a19805\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.005858759829229752, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.5680807846818832, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.0017380628946666657, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6538360924023249, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9126253026896349, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.8611996177323354, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7653930008850555, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.946361669262305, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9064549318480574, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7837810353244848, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9414944910250483, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9140995655059172, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}}, \"data\": {\"name\": \"data-de905217ad89b0069b8d4b449d1f9d4c\"}, \"mark\": {\"type\": \"circle\", \"size\": 125}, \"encoding\": {\"color\": {\"field\": \"epitope\", \"legend\": null, \"scale\": {\"range\": [\"#0072B2\", \"#009E73\", \"#CC79A7\"]}, \"type\": \"nominal\"}, \"column\": {\"field\": \"epitope\", \"type\": \"nominal\"}, \"tooltip\": [{\"field\": \"mutation_rate\", \"type\": \"nominal\"}, {\"field\": \"correlation (R^2)\", \"format\": \".3f\", \"type\": \"quantitative\"}], \"x\": {\"field\": \"mutation_rate\", \"sort\": {\"field\": \"x\", \"order\": \"descending\"}, \"type\": \"ordinal\"}, \"y\": {\"field\": \"correlation (R^2)\", \"type\": \"quantitative\"}}, \"height\": 200, \"title\": \"inferred vs. true mutation escape values\", \"width\": 200, \"$schema\": \"https://vega.github.io/schema/vega-lite/v5.2.0.json\", \"datasets\": {\"data-de905217ad89b0069b8d4b449d1f9d4c\": [{\"epitope\": \"class 1\", \"correlation (R^2)\": 0.00010802708532396839, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.7070381444096622, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.11539521378609083, \"mutation_rate\": \"avg1muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6070700190444476, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9481244054347577, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9180433681758694, \"mutation_rate\": \"avg2muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.6903693412396601, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.973458806521, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9496508848872558, \"mutation_rate\": \"avg3muts\"}, {\"epitope\": \"class 1\", \"correlation (R^2)\": 0.7964770897971977, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 2\", \"correlation (R^2)\": 0.9703951860765229, \"mutation_rate\": \"avg4muts\"}, {\"epitope\": \"class 3\", \"correlation (R^2)\": 0.9624320506470506, \"mutation_rate\": \"avg4muts\"}]}}, {\"mode\": \"vega-lite\"});\n",
        "</script>"
       ],
       "text/plain": [
@@ -466,8 +514,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With prior knowledge, an average of at least 2 mutations per gene is needed to infer the true mutation-escape values for all epitopes. When there is an average of 1 mutation per gene, the correlation is highest for the most immunodominant epitope 2 and lowest for the most subdominant epitope 1. This is expected, as we should not observe escape for variants with a single mutation in a subdominant epitope."
+    "An average of at least 2 mutations per gene is needed to infer the true mutation-escape values for all epitopes. When there is an average of 1 mutation per gene, the correlation is highest for the most immunodominant epitope 2 and lowest for the most subdominant epitope 1. This is expected, as we should not observe escape for variants with a single mutation in a subdominant epitope."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
