--- a/optimization.ipynb
+++ b/optimization.ipynb
@@ -8,11 +8,7 @@
     "# Details on fitting\n",
     "Here we describe how the `polyclonal` package actually fits the models.\n",
     "\n",
-    "The basic idea is to minimize the difference between the predicted and measured variant-level escape probabilities, $p_v\\left(c\\right)$, using a loss function that is not overly sensitive to outliers.\n",
-    "In addition, by default there is regularization:\n",
-    "\n",
-    " 1. The mutation escape values $\\beta_{m,e}$ to capture the idea that most mutations should not mediate escape at most sites.\n",
-    " 2. The spread on mutation escape values at each site to capture the idea that different mutations at the same site should have similar-ish effects on escape.\n",
+    "The basic idea is to minimize the difference between the predicted and measured variant-level escape probabilities, $p_v\\left(c\\right)$, using a loss function that is not overly sensitive to outliers. In addition, there is regularization to encourage parameters to behave under biologically motivated constraints. \n",
     "\n",
     "## Implementation\n",
     "The fitting is implemented in the `Polyclonal.fit` function, which allows adjustment of the weights for the regularization.\n",
@@ -50,21 +46,91 @@
     "\n",
     " 1. Most mutations should not mediate escape,\n",
     " 2. When a site is involved in escape for a given epitope, most mutations at a site will have similar-ish effects.\n",
-    " 3. Epitope activities should be small (or negative) except when clear evidence to the contrary.\n",
-    "\n",
+    " 3. Epitopes should be mostly unique: a site involved in escape should usually only mediate escape from a single epitope.\n",
+    " 4. Epitopes should be relatively spatially compact (requires structural information).\n",
+    " 5. Epitope activities should be small (or negative) except when clear evidence to the contrary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecea750e-7010-4615-af90-10c57823b263",
+   "metadata": {},
+   "source": [
     "### Regularization of escape values \n",
     "We regularize the escape values $\\beta_{m,e}$ using a simple Pseudo-Huber function, so that\n",
     "$$R_{\\rm{escape}} = \\lambda_{\\rm{escape}} \\sum_{m,e} h_{\\delta_{\\rm{escape}}}\\left(\\beta_{m,e}\\right)$$\n",
-    "where $\\lambda_{\\rm{escape}}$ is the strength of the regularization and $\\delta_{\\rm{escape}}$ is the Psdeuo-Huber delta parameter.\n",
-    "\n",
+    "where $\\lambda_{\\rm{escape}}$ is the strength of the regularization and $\\delta_{\\rm{escape}}$ is the Psdeuo-Huber delta parameter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "635cf7a7-b76b-4492-bb67-be2f7f355f51",
+   "metadata": {},
+   "source": [
     "### Regularization of spread of escape values at each site and epitope\n",
     "We regularize the variance of the escape values at each site, so that\n",
     "$$R_{\\rm{spread}} = \\lambda_{\\rm{spread}} \\sum_{e,i} \\frac{1}{M_i}\\sum_{m \\in i}\\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)^2$$\n",
-    "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$.\n",
+    "where $i$ ranges over all sites, $M_i$ is the number of mutations at site $i$, and $m \\in i$ indicates all mutations at site $i$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c007c88-f11e-490b-8df3-1ff9ed4f4c15",
+   "metadata": {},
+   "source": [
+    "### Regularization of spatial spread of epitopes\n",
+    "To regularize the spatial spread of epitopes, we first define a differentiable measure of the average absolute value of escape at a site for an epitope $e$ as\n",
+    "$$\n",
+    "s_{r,e} = \\sqrt{\\frac{1}{M_r} \\sum_{m \\in r} \\beta_{m,e}^2 + \\epsilon} - \\sqrt{\\epsilon}\n",
+    "$$\n",
+    "where $\\epsilon$ is a small number and $m$ ranges over all mutations at site $r$.\n",
     "\n",
+    "We then further assume that we have an experimental measure of $d_{r,r'}$ of the distance between each pair of residues $r$ and $r'$.\n",
+    "\n",
+    "The regularization term is then:\n",
+    "$$\n",
+    "R_{\\rm{spatial}} = \\frac{1}{2}\\sum_e \\sum_r \\sum_{r'} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)s_{r,e} s_{r',e}\n",
+    "$$\n",
+    "Note how this term has weights enabling regularization on both the distances and squared distances.\n",
+    "The factor of $\\frac{1}{2}$ is to avoid double counting pairs, noting that the diagonal elements are always zero since the self distances are zero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9db9477-92ba-49df-9acd-eb3e5a499d84",
+   "metadata": {},
+   "source": [
+    "### Regularization of epitope uniqueness\n",
+    "To regularize to ensure epitopes contain largely unique sites, we define the following term which uses the differentiable average absolute value of escape at a site for an epitope $s_{r,e}$ defined above:\n",
+    "$$\n",
+    "R_{\\rm{uniqueness}} = \\frac{1}{2}\\lambda_{\\rm{uniqueness}} \\sum_r \\sum_e \\sum_{e' \\ne e} s_{r,e} s_{r,e'}\n",
+    "$$\n",
+    "where $e$ and $e'$ range over all pairs of epitopes, and $r$ ranges over all sites."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26663350-97d0-49c6-8edb-72015dac6e46",
+   "metadata": {},
+   "source": [
+    "### Regularization of epitope uniqueness$^2$\n",
+    "This is a second regularization to ensure epitopes contain largely unique sites, but this one operates on the **squared** product of escape at a site, and so will more strongly penalize very large escape at same site, but less penalize weak shared constraint:\n",
+    "$$ R_{\\rm{uniquness}^2} = \\lambda_{\\rm{uniqueness}^2} \\sum_{i} \\sum_{j > i} \\sum_{k} \\left(\\sum_{m' \\in S_{k}} \\beta_{m',i}^2\\right)\\left(\\sum_{m' \\in S_{k}} \\beta_{m',j}^2\\right)$$\n",
+    "where $i$, $j$ range over all epitopes $E$, $k$ is the site index, and $m' \\in S_{k}$ represents all mutations at site $k$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44aa1216-b212-4209-beda-714c1feae8ec",
+   "metadata": {},
+   "source": [
     "### Regularization of epitope activities\n",
-    "We regularize the epitope activities $a_{\\rm{wt}, e}$ the wildtype activities so that the regularization is 0 when the activity is negative and a Pseudo-Huber function when the activity is positive, so that\n",
-    "$$R_{\\rm{activity}} = \\lambda_{\\rm{activity}} \\sum_e \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0\\end{cases} $$\n",
+    "We regularize the epitope activities $a_{\\rm{wt}, e}$ to be close to zero using Pseudo-Huber function.\n",
+    "Note that the activities are confounded with the concentration scale, so for this regularization we first compute the geometric mean concentration $c_{GM}$ and incorporate that so the strength of the regularization is about the same regardless of the concentrations.\n",
+    "Specifically, the regularization is:\n",
+    "$$\n",
+    "R_{\\rm{activity}} = \\lambda_{\\rm{activity}} h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e} + \\log c_{GM} \\right)\n",
+    "$$\n",
     "where $\\lambda_{\\rm{activity}}$ is the strength of the regularization and $\\delta_{\\rm{activity}}$ is the Psdeuo-Huber delta parameter."
    ]
   },
@@ -177,12 +243,78 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a200cfb3-33dd-403f-9dd0-3ed1b50120bb",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e}}$\n",
+    "$$\n",
+    "\\frac{\\partial s_{r,e}}{\\partial \\beta_{m,e'}} =\n",
+    "\\begin{cases}\n",
+    "\\frac{\\beta_{m,e'}}{\\sqrt{M_r \\sum_{m' \\in r} \\beta_{m',e'}^2 + \\epsilon}} \n",
+    "& \\rm{if\\,} m \\in r \\rm{\\, and \\,} e = e'\\\\\n",
+    "0 & \\rm{otherwise} \\\\\n",
+    "\\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "459c50e8-215d-4071-a9cd-231afe1eca59",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{spatial}}}{\\partial \\beta_{m,e}}$\n",
+    "$$\n",
+    "\\frac{R_{\\rm{spatial}}}{\\partial \\beta_{m,e}}\n",
+    "=\n",
+    "\\frac{1}{2}\\sum_r \\sum_{r'} \\left(\\lambda_{\\rm{spatial},1} d_{r,r'} + \\lambda_{\\rm{spatial},2} d_{r,r'}^2\\right)\n",
+    "\\left(\n",
+    "\\frac{s_{r,e}}{\\partial \\beta_{m,e}} s_{r',e} + s_{r,e} \\frac{\\partial s_{r',e}}{\\partial \\beta_{m,e}}\n",
+    "\\right)\n",
+    "=\n",
+    "\\sum_r\n",
+    "\\left(\\lambda_{\\rm{spatial},1} d_{r,r_m} + \\lambda_{\\rm{spatial},2} d_{r,r_m}^2\\right) s_{r,e} \\frac{\\partial s_{r_m,e}}{\\partial \\beta_{m,e}}\n",
+    "$$\n",
+    "where $r_m$ is the site of mutation $m$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0707fe5-eb16-4c9a-8c40-2308509362a8",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{uniqueness}}}{\\partial \\beta_{m,e}}$\n",
+    "$$\n",
+    "\\frac{\\partial R_{\\rm{uniqueness}}}{\\partial \\beta_{m,e}}\n",
+    "=\n",
+    "\\frac{1}{2}\\lambda_{\\rm{uniqueness}} \\sum_r \\sum_{e'} \\sum_{e'' \\ne e'}\n",
+    "\\left(\n",
+    "\\frac{\\partial s_{r,e'}}{\\partial \\beta_{m,e}} s_{r,e''} + s_{r,e'} \\frac{\\partial s_{r,e''}}{\\partial \\beta_{m,e}}\n",
+    "\\right)\n",
+    "=\n",
+    "\\lambda_{\\rm{uniqueness}} \\sum_{e' \\ne e}\n",
+    "\\frac{\\partial s_{r_m,e}}{\\partial \\beta_{m,e}} s_{r_m,e'}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a233635-cd39-4b6b-8655-2845ba63aa7e",
+   "metadata": {},
+   "source": [
+    "#### Calculating $\\frac{\\partial R_{\\rm{uniqueness}^2}}{\\partial \\beta_{m,e}}$\n",
+    "$$ \\frac{\\partial{R_{\\rm{uniqueness}^2}}}{\\partial{\\beta_{m,e}}} = 2\\lambda_{\\rm{uniqueness}^2} \\beta_{m,e} \\sum_{j \\neq e} \\sum_{m' \\in S_k}\\left(\\beta_{m',j}^2\\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4faa44e7-c8e6-4016-8ffc-cacd523da8c0",
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}}$\n",
     "\n",
-    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} = \\begin{cases} 0 & \\rm{if \\;} a_{\\rm{wt}, e} < 0 \\\\ \\frac{\\lambda_{\\rm{escape}}a_{\\rm{wt}, e}}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e}\\right) + \\delta_{\\rm{activity}}} & \\rm{if \\;} a_{\\rm{wt}, e} \\ge 0 \\end{cases}$$"
+    "$$\\frac{\\partial R_{\\rm{activity}}}{\\partial a_{\\rm{wt}, e}} =\n",
+    "\\frac{\\lambda_{\\rm{escape}}\\left(a_{\\rm{wt}, e} + \\log c_{GM}\\right)}{h_{\\delta_{\\rm{activity}}}\\left(a_{\\rm{wt}, e} + \\log c_{GM}\\right) + \\delta_{\\rm{activity}}} \n",
+    "$$"
    ]
   },
   {
@@ -201,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11a6eb63-32fa-4e49-8faf-7b103c24e9ff",
+   "id": "d4b55a9b-ee9c-4406-840d-09327a5e76a1",
    "metadata": {},
    "outputs": [],
    "source": []
